<resources>
    <string name="app_name">predictable</string>

    <string name="action_settings">Settings</string>
    <string name="hint_text_prediction_title">Your prediction</string>
    <string name="label_personal_confidence">Your personal confidence</string>
    <string name="label_due_date">Known by</string>
    <string name="menu_save_prediction">Save</string>
    <string name="title_activity_new_prediction">Create prediction</string>

    <string name="status_overdue">Should be known by now</string>
    <string name="status_known_by">Known by %1$s</string>
    <string name="status_judged">Judged %1$s on %2$s</string>

    <string name="text_no_confidence">\??</string>

    <string name="state_open">open</string>
    <string name="state_correct">correct</string>
    <string name="state_incorrect">incorrect</string>
    <string name="state_invalid">invalid</string>

    <string name="title_judged_predictions">Already judged</string>
    <string name="title_upcoming_predictions">Upcoming</string>
    <string name="title_overdue_predictions">To be judged</string>

    <string name="action_reopen">Reopen</string>
    <string name="action_judge_correct">Correct</string>
    <string name="action_judge_incorrect">Incorrect</string>
    <string name="action_judge_invalid">Invalid</string>
    <string name="label_judge_prediction">Judge this </string>
    <string name="label_confidence_graph">Your confidence</string>
    <string name="action_update_confidence">Save</string>
    <string name="label_updated_confidence">New confidence</string>
    <string name="symbol_percent">%</string>
    <string name="text_no_confidence_long">No confidence given!</string>
    <string name="action_delete_prediction">Delete</string>
    <string name="error_invalid_prediction">Prediction not found!</string>
    <string name="action_show_full_prediction_list">Show more</string>
    <string name="action_show_statistics">Statistics</string>
    <string name="label_statistic_total_prediction_count">Total predictions</string>
    <string name="label_statistic_average_cross_entropy">Average cross entropy</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="piechart_state_open">Open</string>
    <string name="piechart_state_correct">Correct</string>
    <string name="piechart_state_incorrect">Incorrect</string>
    <string name="piechart_state_invalid">Invalid</string>
    <string name="header_confidence_calibration">Confidence Calibration</string>
    <string name="column_header_confidence">Confidence</string>
    <string name="column_header_total_count">Total</string>
    <string name="column_header_correct_count">Correct</string>
    <string name="column_header_correct_percentage">Percentage</string>
    <string name="confidence_range_format">%1$.0f%%&#8211;%2$.0f%%</string> <!-- #8211 = en-dash -->
    <string name="calibration_table_correct_percentage_format">%1$.1f%%</string>
    <string name="text_reduce_histogram">Invert predictions with confidence &#8804; 50%</string>
</resources>
