<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="statistics"
            type="de.chribi.predictable.statistics.StatisticsViewModel"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            style="@style/statistic_label"
            android:id="@+id/label_avg_cross_entropy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_statistic_average_cross_entropy"
            app:layout_constraintLeft_toLeftOf="@id/constraint_layout"
            app:layout_constraintTop_toTopOf="@id/constraint_layout"
            />

        <TextView
            style="@style/statistic_value"
            android:id="@+id/value_avg_cross_entropy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.format(`%.3f`, statistics.averageCrossEntropy)}"
            app:layout_constraintTop_toBottomOf="@id/label_avg_cross_entropy"
            />

        <TextView
            style="@style/statistic_label"
            android:id="@+id/label_total_prediction_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_statistic_total_prediction_count"
            app:layout_constraintTop_toBottomOf="@+id/value_avg_cross_entropy"
            />

        <TextView
            style="@style/statistic_value"
            android:id="@+id/value_total_prediction_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(statistics.stateCounts.totalCount)}"
            app:layout_constraintTop_toBottomOf="@id/label_total_prediction_count"
            />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_state_distribution"
            android:layout_width="match_parent"
            android:layout_height="@dimen/piechart_height"
            app:predictionStateCounts="@{statistics.stateCounts}"
            app:holeRadius="@{@dimen/piechart_hole_radius}"
            app:transparentCircleRadius="@{@dimen/piechart_hole_radius}"
            app:description="@{null}"
            app:layout_constraintTop_toBottomOf="@id/value_total_prediction_count"
            />

        <TextView
            android:id="@+id/header_calibration"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_confidence_calibration"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/chart_state_distribution"
            />

        <CheckBox
            android:id="@+id/checkbox_reduce_histogram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_reduce_histogram"
            android:checked="@={statistics.invertLowConfidencePredictions}"
            app:layout_constraintTop_toBottomOf="@id/header_calibration"
            />

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/chart_calibration_histogram"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:calibrationHistogramData="@{statistics.calibrationHistogram}"
            app:layout_constraintTop_toBottomOf="@id/checkbox_reduce_histogram"
            app:description="@{null}"
            />

        <TableLayout
            android:id="@+id/table_calibration_histogram_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/chart_calibration_histogram"
            app:calibrationHistogramData="@{statistics.calibrationHistogram}"
            >
            <TableRow
                android:paddingBottom="4dp"
                >

                <TextView
                    style="@style/statistic_table_header"
                    android:text="@string/column_header_confidence"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    style="@style/statistic_table_header"
                    android:text="@string/column_header_total_count"
                    android:layout_gravity="right"
                    />
                <TextView
                    style="@style/statistic_table_header"
                    android:text="@string/column_header_correct_count"
                    android:layout_gravity="right"
                    />
                <TextView
                    style="@style/statistic_table_header"
                    android:text="@string/column_header_correct_percentage"
                    android:layout_gravity="right"
                    />

            </TableRow>

            <!-- Content rows are added from databinding -->
        </TableLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
